# MTA-MHC-Datatahon

./: README.md  _config.yml  pyproject.toml  requirements.txt
data/cleaned/: routes.csv
notebooks/: Untitled0 (1).ipynb  ace_querying.ipynb  ace_ridership_data.ipynb  classdeclaration.ipynb  violations_exempt_test (1).ipynb  violations_exempt_test.ipynb
