[project]
name = "mta-mhc-datatahon"
version = "0.1.0"
description = "The repository for the MTA Macaulay Honors College Datathon!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
